# CMakePractice

p1-hello/: CMakeLists.txt
